[MSS-903] MVMT homepage on ie, images heights fixed

--- a/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/components/_homeSlots.scss
+++ b/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/components/_homeSlots.scss
@@ -88,7 +88,7 @@
             }
 
             @include media-breakpoint-up(xl-custom) {
-                height: rem(750);
+                height: rem(600);
             }
         }
 
